--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         </button>
                         <!-- LOGO -->
                         <div class="inner-logo">
-                            <a href="/index.html">
+                            <a href="./index.html">
                                 <img
                                     src="./assets/img/logo.svg"
                                     alt="TQD.TRAVEL"
@@ -47,7 +47,7 @@
                         <nav class="nav">
                             <ul class="nav-list">
                                 <li class="nav-item">
-                                    <a href="/index.html">Home</a>
+                                    <a href="./index.html">Home</a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="./domestic-tours.html"
@@ -76,7 +76,7 @@
 
                         <!-- CART -->
                         <div class="inner-cart">
-                            <a href="/cart.html">
+                            <a href="./cart.html">
                                 <img src="assets/img/icon-cart.svg" alt="" />
                                 <span>1</span>
                             </a>
@@ -327,7 +327,7 @@
                         <!-- PRODUCT-ITEM -->
                         <div class="product-item">
                             <div class="inner-image">
-                                <a href="/tour-details.html">
+                                <a href="./tour-details.html">
                                     <img
                                         src="./assets/img/product-5.jpg"
                                         alt=""
@@ -340,7 +340,7 @@
                             </div>
                             <div class="inner-content">
                                 <h3 class="inner-title">
-                                    <a href="/tour-details.html">
+                                    <a href="./tour-details.html">
                                         Combo Tour 2024: Ha Noi - Lao Cai - Sapa
                                         4N3D
                                     </a>
@@ -392,7 +392,7 @@
                         <!-- PRODUCT-ITEM -->
                         <div class="product-item">
                             <div class="inner-image">
-                                <a href="/tour-details.html">
+                                <a href="./tour-details.html">
                                     <img
                                         src="./assets/img/product-6.jpg"
                                         alt=""
@@ -405,7 +405,7 @@
                             </div>
                             <div class="inner-content">
                                 <h3 class="inner-title">
-                                    <a href="/tour-details.html">
+                                    <a href="./tour-details.html">
                                         Tour 2025 Phu Quoc - Thien Duong Bao
                                         Ngoc (3N2D)
                                     </a>
@@ -457,7 +457,7 @@
                         <!-- PRODUCT-ITEM -->
                         <div class="product-item">
                             <div class="inner-image">
-                                <a href="/tour-details.html">
+                                <a href="./tour-details.html">
                                     <img
                                         src="./assets/img/product-7.jpg"
                                         alt=""
@@ -470,7 +470,7 @@
                             </div>
                             <div class="inner-content">
                                 <h3 class="inner-title">
-                                    <a href="/tour-details.html">
+                                    <a href="./tour-details.html">
                                         Combo Da Nang 2024: Da Nang - Hoi An- Ba
                                         Na Hill
                                     </a>
@@ -522,7 +522,7 @@
                         <!-- PRODUCT-ITEM -->
                         <div class="product-item">
                             <div class="inner-image">
-                                <a href="/tour-details.html">
+                                <a href="./tour-details.html">
                                     <img
                                         src="./assets/img/product-8.jpg"
                                         alt=""
@@ -535,7 +535,7 @@
                             </div>
                             <div class="inner-content">
                                 <h3 class="inner-title">
-                                    <a href="/tour-details.html">
+                                    <a href="./tour-details.html">
                                         Tour 2024: Nha Trang - VinWonders - Dao
                                         Binh Ba
                                     </a>
@@ -587,7 +587,7 @@
                         <!-- PRODUCT-ITEM -->
                         <div class="product-item">
                             <div class="inner-image">
-                                <a href="/tour-details.html">
+                                <a href="./tour-details.html">
                                     <img
                                         src="./assets/img/product-9.jpg"
                                         alt=""
@@ -600,7 +600,7 @@
                             </div>
                             <div class="inner-content">
                                 <h3 class="inner-title">
-                                    <a href="/tour-details.html">
+                                    <a href="./tour-details.html">
                                         Combo Tour 2025: Sapa – Fansipan – Ban
                                         Cat Cat
                                     </a>
@@ -653,7 +653,7 @@
                         <!-- PRODUCT-ITEM -->
                         <div class="product-item">
                             <div class="inner-image">
-                                <a href="/tour-details.html">
+                                <a href="./tour-details.html">
                                     <img
                                         src="./assets/img/product-10.jpg"
                                         alt=""
@@ -666,7 +666,7 @@
                             </div>
                             <div class="inner-content">
                                 <h3 class="inner-title">
-                                    <a href="/tour-details.html">
+                                    <a href="./tour-details.html">
                                         Tour 2025 Da Lat - Thanh pho ngan hoa
                                         (3N2D)
                                     </a>
@@ -719,7 +719,7 @@
                         <!-- PRODUCT-ITEM -->
                         <div class="product-item">
                             <div class="inner-image">
-                                <a href="/tour-details.html">
+                                <a href="./tour-details.html">
                                     <img
                                         src="./assets/img/product-11.jpg"
                                         alt=""
@@ -732,7 +732,7 @@
                             </div>
                             <div class="inner-content">
                                 <h3 class="inner-title">
-                                    <a href="/tour-details.html">
+                                    <a href="./tour-details.html">
                                         Combo Da Nang 2025: Phu Quoc - Grand
                                         World
                                     </a>
@@ -785,7 +785,7 @@
                         <!-- PRODUCT-ITEM -->
                         <div class="product-item">
                             <div class="inner-image">
-                                <a href="/tour-details.html">
+                                <a href="./tour-details.html">
                                     <img
                                         src="./assets/img/product-12.jpg"
                                         alt=""
@@ -798,7 +798,7 @@
                             </div>
                             <div class="inner-content">
                                 <h3 class="inner-title">
-                                    <a href="/tour-details.html">
+                                    <a href="./tour-details.html">
                                         Tour 2025: Mien Tay - Chau Doc - Rung
                                         Tram Tra Su
                                     </a>
@@ -862,7 +862,7 @@
                         <!-- PRODUCT-ITEM -->
                         <div class="product-item">
                             <div class="inner-image">
-                                <a href="/tour-details.html">
+                                <a href="./tour-details.html">
                                     <img
                                         src="./assets/img/product-5.jpg"
                                         alt=""
@@ -875,7 +875,7 @@
                             </div>
                             <div class="inner-content">
                                 <h3 class="inner-title">
-                                    <a href="/tour-details.html">
+                                    <a href="./tour-details.html">
                                         Combo Tour 2024: Ha Noi - Lao Cai - Sapa
                                         4N3D
                                     </a>
@@ -927,7 +927,7 @@
                         <!-- PRODUCT-ITEM -->
                         <div class="product-item">
                             <div class="inner-image">
-                                <a href="/tour-details.html">
+                                <a href="./tour-details.html">
                                     <img
                                         src="./assets/img/product-6.jpg"
                                         alt=""
@@ -940,7 +940,7 @@
                             </div>
                             <div class="inner-content">
                                 <h3 class="inner-title">
-                                    <a href="/tour-details.html">
+                                    <a href="./tour-details.html">
                                         Tour 2025 Phu Quoc - Thien Duong Bao
                                         Ngoc (3N2D)
                                     </a>
@@ -992,7 +992,7 @@
                         <!-- PRODUCT-ITEM -->
                         <div class="product-item">
                             <div class="inner-image">
-                                <a href="/tour-details.html">
+                                <a href="./tour-details.html">
                                     <img
                                         src="./assets/img/product-7.jpg"
                                         alt=""
@@ -1005,7 +1005,7 @@
                             </div>
                             <div class="inner-content">
                                 <h3 class="inner-title">
-                                    <a href="/tour-details.html">
+                                    <a href="./tour-details.html">
                                         Combo Da Nang 2024: Da Nang - Hoi An- Ba
                                         Na Hill
                                     </a>
@@ -1057,7 +1057,7 @@
                         <!-- PRODUCT-ITEM -->
                         <div class="product-item">
                             <div class="inner-image">
-                                <a href="/tour-details.html">
+                                <a href="./tour-details.html">
                                     <img
                                         src="./assets/img/product-8.jpg"
                                         alt=""
@@ -1070,7 +1070,7 @@
                             </div>
                             <div class="inner-content">
                                 <h3 class="inner-title">
-                                    <a href="/tour-details.html">
+                                    <a href="./tour-details.html">
                                         Tour 2024: Nha Trang - VinWonders - Dao
                                         Binh Ba
                                     </a>
@@ -1122,7 +1122,7 @@
                         <!-- PRODUCT-ITEM -->
                         <div class="product-item">
                             <div class="inner-image">
-                                <a href="/tour-details.html">
+                                <a href="./tour-details.html">
                                     <img
                                         src="./assets/img/product-9.jpg"
                                         alt=""
@@ -1135,7 +1135,7 @@
                             </div>
                             <div class="inner-content">
                                 <h3 class="inner-title">
-                                    <a href="/tour-details.html">
+                                    <a href="./tour-details.html">
                                         Combo Tour 2025: Sapa – Fansipan – Ban
                                         Cat Cat
                                     </a>
@@ -1188,7 +1188,7 @@
                         <!-- PRODUCT-ITEM -->
                         <div class="product-item">
                             <div class="inner-image">
-                                <a href="/tour-details.html">
+                                <a href="./tour-details.html">
                                     <img
                                         src="./assets/img/product-10.jpg"
                                         alt=""
@@ -1201,7 +1201,7 @@
                             </div>
                             <div class="inner-content">
                                 <h3 class="inner-title">
-                                    <a href="/tour-details.html">
+                                    <a href="./tour-details.html">
                                         Tour 2025 Da Lat - Thanh pho ngan hoa
                                         (3N2D)
                                     </a>
@@ -1254,7 +1254,7 @@
                         <!-- PRODUCT-ITEM -->
                         <div class="product-item">
                             <div class="inner-image">
-                                <a href="/tour-details.html">
+                                <a href="./tour-details.html">
                                     <img
                                         src="./assets/img/product-11.jpg"
                                         alt=""
@@ -1267,7 +1267,7 @@
                             </div>
                             <div class="inner-content">
                                 <h3 class="inner-title">
-                                    <a href="/tour-details.html">
+                                    <a href="./tour-details.html">
                                         Combo Da Nang 2025: Phu Quoc - Grand
                                         World
                                     </a>
@@ -1320,7 +1320,7 @@
                         <!-- PRODUCT-ITEM -->
                         <div class="product-item">
                             <div class="inner-image">
-                                <a href="/tour-details.html">
+                                <a href="./tour-details.html">
                                     <img
                                         src="./assets/img/product-12.jpg"
                                         alt=""
@@ -1333,7 +1333,7 @@
                             </div>
                             <div class="inner-content">
                                 <h3 class="inner-title">
-                                    <a href="/tour-details.html">
+                                    <a href="./tour-details.html">
                                         Tour 2025: Mien Tay - Chau Doc - Rung
                                         Tram Tra Su
                                     </a>
@@ -1384,7 +1384,7 @@
                         </div>
                     </div>
                     <div class="product-link">
-                        <a href="/domestic-tours.html" class="btn">View All</a>
+                        <a href="./domestic-tours.html" class="btn">View All</a>
                     </div>
                 </div>
             </section>
