--- a/domestic-tours.html
+++ b/domestic-tours.html
@@ -34,7 +34,7 @@
                         </button>
                         <!-- LOGO -->
                         <div class="inner-logo">
-                            <a href="/index.html">
+                            <a href="./index.html">
                                 <img
                                     src="./assets/img/logo.svg"
                                     alt="TQD.TRAVEL"
@@ -47,15 +47,15 @@
                         <nav class="nav">
                             <ul class="nav-list">
                                 <li class="nav-item">
-                                    <a href="/index.html">Home</a>
+                                    <a href="./index.html">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="/domestic-tours.html"
+                                    <a href="./domestic-tours.html"
                                         >Domestic Tours</a
                                     >
                                 </li>
                                 <li class="nav-item">
-                                    <a href="/domestic-tours.html"
+                                    <a href="./domestic-tours.html"
                                         >International Tours</a
                                     >
                                 </li>
@@ -76,7 +76,7 @@
 
                         <!-- CART -->
                         <div class="inner-cart">
-                            <a href="/cart.html">
+                            <a href="./cart.html">
                                 <img src="assets/img/icon-cart.svg" alt="" />
                                 <span>1</span>
                             </a>
@@ -297,7 +297,7 @@
                                 <!-- PRODUCT-ITEM -->
                                 <div class="product-item">
                                     <div class="inner-image">
-                                        <a href="/tour-details.html">
+                                        <a href="./tour-details.html">
                                             <img
                                                 src="./assets/img/product-5.jpg"
                                                 alt=""
@@ -310,7 +310,7 @@
                                     </div>
                                     <div class="inner-content">
                                         <h3 class="inner-title">
-                                            <a href="/tour-details.html">
+                                            <a href="./tour-details.html">
                                                 Combo Tour 2024: Ha Noi - Lao
                                                 Cai - Sapa 4N3D
                                             </a>
@@ -379,7 +379,7 @@
                                 <!-- PRODUCT-ITEM -->
                                 <div class="product-item">
                                     <div class="inner-image">
-                                        <a href="/tour-details.html">
+                                        <a href="./tour-details.html">
                                             <img
                                                 src="./assets/img/product-6.jpg"
                                                 alt=""
@@ -392,7 +392,7 @@
                                     </div>
                                     <div class="inner-content">
                                         <h3 class="inner-title">
-                                            <a href="/tour-details.html">
+                                            <a href="./tour-details.html">
                                                 Tour 2025 Phu Quoc - Thien Duong
                                                 Bao Ngoc (3N2D)
                                             </a>
@@ -461,7 +461,7 @@
                                 <!-- PRODUCT-ITEM -->
                                 <div class="product-item">
                                     <div class="inner-image">
-                                        <a href="/tour-details.html">
+                                        <a href="./tour-details.html">
                                             <img
                                                 src="./assets/img/product-7.jpg"
                                                 alt=""
@@ -474,7 +474,7 @@
                                     </div>
                                     <div class="inner-content">
                                         <h3 class="inner-title">
-                                            <a href="/tour-details.html">
+                                            <a href="./tour-details.html">
                                                 Combo Da Nang 2024: Da Nang -
                                                 Hoi An- Ba Na Hill
                                             </a>
@@ -543,7 +543,7 @@
                                 <!-- PRODUCT-ITEM -->
                                 <div class="product-item">
                                     <div class="inner-image">
-                                        <a href="/tour-details.html">
+                                        <a href="./tour-details.html">
                                             <img
                                                 src="./assets/img/product-8.jpg"
                                                 alt=""
@@ -556,7 +556,7 @@
                                     </div>
                                     <div class="inner-content">
                                         <h3 class="inner-title">
-                                            <a href="/tour-details.html">
+                                            <a href="./tour-details.html">
                                                 Tour 2024: Nha Trang -
                                                 VinWonders - Dao Binh Ba
                                             </a>
@@ -625,7 +625,7 @@
                                 <!-- PRODUCT-ITEM -->
                                 <div class="product-item">
                                     <div class="inner-image">
-                                        <a href="/tour-details.html">
+                                        <a href="./tour-details.html">
                                             <img
                                                 src="./assets/img/product-9.jpg"
                                                 alt=""
@@ -638,7 +638,7 @@
                                     </div>
                                     <div class="inner-content">
                                         <h3 class="inner-title">
-                                            <a href="/tour-details.html">
+                                            <a href="./tour-details.html">
                                                 Combo Tour 2025: Sapa – Fansipan
                                                 – Ban Cat Cat
                                             </a>
@@ -707,7 +707,7 @@
                                 <!-- PRODUCT-ITEM -->
                                 <div class="product-item">
                                     <div class="inner-image">
-                                        <a href="/tour-details.html">
+                                        <a href="./tour-details.html">
                                             <img
                                                 src="./assets/img/product-10.jpg"
                                                 alt=""
@@ -720,7 +720,7 @@
                                     </div>
                                     <div class="inner-content">
                                         <h3 class="inner-title">
-                                            <a href="/tour-details.html">
+                                            <a href="./tour-details.html">
                                                 Tour 2025 Da Lat - Thanh pho
                                                 ngan hoa (3N2D)
                                             </a>
@@ -789,7 +789,7 @@
                                 <!-- PRODUCT-ITEM -->
                                 <div class="product-item">
                                     <div class="inner-image">
-                                        <a href="/tour-details.html">
+                                        <a href="./tour-details.html">
                                             <img
                                                 src="./assets/img/product-11.jpg"
                                                 alt=""
@@ -802,7 +802,7 @@
                                     </div>
                                     <div class="inner-content">
                                         <h3 class="inner-title">
-                                            <a href="/tour-details.html">
+                                            <a href="./tour-details.html">
                                                 Combo Da Nang 2025: Phu Quoc -
                                                 Grand World
                                             </a>
@@ -871,7 +871,7 @@
                                 <!-- PRODUCT-ITEM -->
                                 <div class="product-item">
                                     <div class="inner-image">
-                                        <a href="/tour-details.html">
+                                        <a href="./tour-details.html">
                                             <img
                                                 src="./assets/img/product-12.jpg"
                                                 alt=""
@@ -884,7 +884,7 @@
                                     </div>
                                     <div class="inner-content">
                                         <h3 class="inner-title">
-                                            <a href="/tour-details.html">
+                                            <a href="./tour-details.html">
                                                 Tour 2025: Mien Tay - Chau Doc -
                                                 Rung Tram Tra Su
                                             </a>
@@ -953,7 +953,7 @@
                                 <!-- PRODUCT-ITEM -->
                                 <div class="product-item">
                                     <div class="inner-image">
-                                        <a href="/tour-details.html">
+                                        <a href="./tour-details.html">
                                             <img
                                                 src="./assets/img/product-5.jpg"
                                                 alt=""
@@ -966,7 +966,7 @@
                                     </div>
                                     <div class="inner-content">
                                         <h3 class="inner-title">
-                                            <a href="/tour-details.html">
+                                            <a href="./tour-details.html">
                                                 Combo Tour 2024: Ha Noi - Lao
                                                 Cai - Sapa 4N3D
                                             </a>
@@ -1035,7 +1035,7 @@
                                 <!-- PRODUCT-ITEM -->
                                 <div class="product-item">
                                     <div class="inner-image">
-                                        <a href="/tour-details.html">
+                                        <a href="./tour-details.html">
                                             <img
                                                 src="./assets/img/product-6.jpg"
                                                 alt=""
@@ -1048,7 +1048,7 @@
                                     </div>
                                     <div class="inner-content">
                                         <h3 class="inner-title">
-                                            <a href="/tour-details.html">
+                                            <a href="./tour-details.html">
                                                 Tour 2025 Phu Quoc - Thien Duong
                                                 Bao Ngoc (3N2D)
                                             </a>
@@ -1117,7 +1117,7 @@
                                 <!-- PRODUCT-ITEM -->
                                 <div class="product-item">
                                     <div class="inner-image">
-                                        <a href="/tour-details.html">
+                                        <a href="./tour-details.html">
                                             <img
                                                 src="./assets/img/product-7.jpg"
                                                 alt=""
@@ -1130,7 +1130,7 @@
                                     </div>
                                     <div class="inner-content">
                                         <h3 class="inner-title">
-                                            <a href="/tour-details.html">
+                                            <a href="./tour-details.html">
                                                 Combo Da Nang 2024: Da Nang -
                                                 Hoi An- Ba Na Hill
                                             </a>
@@ -1199,7 +1199,7 @@
                                 <!-- PRODUCT-ITEM -->
                                 <div class="product-item">
                                     <div class="inner-image">
-                                        <a href="/tour-details.html">
+                                        <a href="./tour-details.html">
                                             <img
                                                 src="./assets/img/product-8.jpg"
                                                 alt=""
@@ -1212,7 +1212,7 @@
                                     </div>
                                     <div class="inner-content">
                                         <h3 class="inner-title">
-                                            <a href="/tour-details.html">
+                                            <a href="./tour-details.html">
                                                 Tour 2024: Nha Trang -
                                                 VinWonders - Dao Binh Ba
                                             </a>
