Fixed domestic tours

--- a/domestic-tours.html
+++ b/domestic-tours.html
@@ -96,11 +96,11 @@
     <!-- Box Breadcrumb -->
     <div class="box-breadcrumb">
       <div class="inner-image">
-        <img src="assets/images/banner-6.jpg" alt="Tour Nước Ngoài" />
+        <img src="assets/images/banner-6.jpg" alt="Tour Trong Nước" />
       </div>
       <div class="inner-content">
         <div class="container">
-          <h1 class="inner-title">Tour Nước Ngoài</h1>
+          <h1 class="inner-title">Tour Trong Nước</h1>
           <nav class="inner-list">
             <ul>
               <li>
