Fix route index

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/viewerjs/1.11.7/viewer.min.css"
     />
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
     <!-- Header -->
@@ -29,7 +29,7 @@
           </button>
           <div class="inner-logo">
             <a href="index.html">
-              <img src="assets/images/logo.svg" alt="TQD.TRAVEL" />
+              <img src="./assets/images/logo.svg" alt="TQD.TRAVEL" />
             </a>
           </div>
           <nav class="inner-menu">
@@ -137,7 +137,7 @@
                 <div class="inner-suggest-list">
                   <div class="inner-item">
                     <div class="inner-item-image">
-                      <img src="assets/images/product-1.jpg" alt="" />
+                      <img src="./assets/images/product-1.jpg" alt="" />
                     </div>
                     <div class="inner-item-content">
                       <div class="inner-item-title">Nhật Bản</div>
@@ -146,7 +146,7 @@
                   </div>
                   <div class="inner-item">
                     <div class="inner-item-image">
-                      <img src="assets/images/product-2.jpg" alt="" />
+                      <img src="./assets/images/product-2.jpg" alt="" />
                     </div>
                     <div class="inner-item-content">
                       <div class="inner-item-title">Phú Quốc</div>
@@ -155,7 +155,7 @@
                   </div>
                   <div class="inner-item">
                     <div class="inner-item-image">
-                      <img src="assets/images/product-3.jpg" alt="" />
+                      <img src="./assets/images/product-3.jpg" alt="" />
                     </div>
                     <div class="inner-item-content">
                       <div class="inner-item-title">Singapore</div>
@@ -274,7 +274,7 @@
                   <div class="product-item">
                     <div class="inner-image">
                       <a href="#">
-                        <img src="assets/images/product-1.jpg" alt="" />
+                        <img src="./assets/images/product-1.jpg" alt="" />
                       </a>
                     </div>
                     <div class="inner-discount">
@@ -327,7 +327,7 @@
                   <div class="product-item">
                     <div class="inner-image">
                       <a href="#">
-                        <img src="assets/images/product-2.jpg" alt="" />
+                        <img src="./assets/images/product-2.jpg" alt="" />
                       </a>
                     </div>
                     <div class="inner-discount">
@@ -382,7 +382,7 @@
                   <div class="product-item">
                     <div class="inner-image">
                       <a href="#">
-                        <img src="assets/images/product-3.jpg" alt="" />
+                        <img src="./assets/images/product-3.jpg" alt="" />
                       </a>
                     </div>
                     <div class="inner-discount">
@@ -437,7 +437,7 @@
                   <div class="product-item">
                     <div class="inner-image">
                       <a href="#">
-                        <img src="assets/images/product-1.jpg" alt="" />
+                        <img src="./assets/images/product-1.jpg" alt="" />
                       </a>
                     </div>
                     <div class="inner-discount">
@@ -490,7 +490,7 @@
                   <div class="product-item">
                     <div class="inner-image">
                       <a href="#">
-                        <img src="assets/images/product-2.jpg" alt="" />
+                        <img src="./assets/images/product-2.jpg" alt="" />
                       </a>
                     </div>
                     <div class="inner-discount">
@@ -545,7 +545,7 @@
                   <div class="product-item">
                     <div class="inner-image">
                       <a href="#">
-                        <img src="assets/images/product-3.jpg" alt="" />
+                        <img src="./assets/images/product-3.jpg" alt="" />
                       </a>
                     </div>
                     <div class="inner-discount">
@@ -600,7 +600,7 @@
                   <div class="product-item">
                     <div class="inner-image">
                       <a href="#">
-                        <img src="assets/images/product-1.jpg" alt="" />
+                        <img src="./assets/images/product-1.jpg" alt="" />
                       </a>
                     </div>
                     <div class="inner-discount">
@@ -673,35 +673,35 @@
             <div class="swiper-slide">
               <div class="inner-item">
                 <a href="#">
-                  <img src="assets/images/banner-1.png" alt="" />
+                  <img src="./assets/images/banner-1.png" alt="" />
                 </a>
               </div>
             </div>
             <div class="swiper-slide">
               <div class="inner-item">
                 <a href="#">
-                  <img src="assets/images/banner-2.png" alt="" />
+                  <img src="./assets/images/banner-2.png" alt="" />
                 </a>
               </div>
             </div>
             <div class="swiper-slide">
               <div class="inner-item">
                 <a href="#">
-                  <img src="assets/images/banner-3.png" alt="" />
+                  <img src="./assets/images/banner-3.png" alt="" />
                 </a>
               </div>
             </div>
             <div class="swiper-slide">
               <div class="inner-item">
                 <a href="#">
-                  <img src="assets/images/banner-2.png" alt="" />
+                  <img src="./assets/images/banner-2.png" alt="" />
                 </a>
               </div>
             </div>
             <div class="swiper-slide">
               <div class="inner-item">
                 <a href="#">
-                  <img src="assets/images/banner-3.png" alt="" />
+                  <img src="./assets/images/banner-3.png" alt="" />
                 </a>
               </div>
             </div>
@@ -728,7 +728,7 @@
           <div class="product-item">
             <div class="inner-image">
               <a href="#">
-                <img src="assets/images/product-1.jpg" alt="" />
+                <img src="./assets/images/product-1.jpg" alt="" />
               </a>
             </div>
             <div class="inner-discount">
@@ -1178,7 +1178,7 @@
           <div class="product-item">
             <div class="inner-image">
               <a href="#">
-                <img src="assets/images/product-1.jpg" alt="" />
+                <img src="./assets/images/product-1.jpg" alt="" />
               </a>
             </div>
             <div class="inner-discount">
@@ -1618,9 +1618,9 @@
         <!-- DIARY-HEADER -->
         <div class="diary-header">
           <h2 class="heading" data-aos="fade-up" data-aos-duration="800">
-            Latest travel diary
+            Nhật ký du lịch
           </h2>
-          <a href="#!" class="btn">Read All Blog</a>
+          <a href="#!" class="btn">Xem tất cả</a>
         </div>
 
         <!-- DIARY-LIST -->
@@ -1770,7 +1770,7 @@
           <div class="inner-copyright">© 2025 TQD. All rights reserved.</div>
           <div class="inner-logo">
             <a href="index.html">
-              <img src="assets/images/logo.svg" alt="" />
+              <img src="./assets/images/logo.svg" alt="" />
             </a>
           </div>
           <nav class="inner-links">
@@ -1819,6 +1819,6 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/viewerjs/1.11.7/viewer.min.js"></script>
     <script src="https://unpkg.com/just-validate@latest/dist/just-validate.production.min.js"></script>
-    <script src="assets/js/script.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
