Fix route tour-details

--- a/tour-details.html
+++ b/tour-details.html
@@ -29,7 +29,7 @@
           </button>
           <div class="inner-logo">
             <a href="index.html">
-              <img src="assets/images/logo.svg" alt="TQD.TRAVEL" />
+              <img src="./assets/images/logo.svg" alt="TQD.TRAVEL" />
             </a>
           </div>
           <nav class="inner-menu">
@@ -84,7 +84,7 @@
 
           <div class="inner-cart">
             <a href="#">
-              <img src="assets/images/icon-cart.svg" alt="Cart" />
+              <img src="./assets/images/icon-cart.svg" alt="Cart" />
               <span>1</span>
             </a>
           </div>
@@ -97,7 +97,7 @@
     <div class="box-breadcrumb">
       <div class="inner-image">
         <img
-          src="assets/images/banner-7.jpg"
+          src="./assets/images/banner-7.jpg"
           alt="Tour Hà Nội - Ninh Bình - Hạ Long - Yên Tử - Sapa | 6N5D"
         />
       </div>
@@ -144,27 +144,27 @@
                   <div class="swiper-wrapper">
                     <div class="swiper-slide">
                       <div class="inner-image">
-                        <img src="assets/images/banner-9.jpg" alt="" />
+                        <img src="./assets/images/banner-9.jpg" alt="" />
                       </div>
                     </div>
                     <div class="swiper-slide">
                       <div class="inner-image">
-                        <img src="assets/images/banner-10.jpg" alt="" />
+                        <img src="./assets/images/banner-10.jpg" alt="" />
                       </div>
                     </div>
                     <div class="swiper-slide">
                       <div class="inner-image">
-                        <img src="assets/images/banner-11.jpg" alt="" />
+                        <img src="./assets/images/banner-11.jpg" alt="" />
                       </div>
                     </div>
                     <div class="swiper-slide">
                       <div class="inner-image">
-                        <img src="assets/images/banner-12.jpg" alt="" />
+                        <img src="./assets/images/banner-12.jpg" alt="" />
                       </div>
                     </div>
                     <div class="swiper-slide">
                       <div class="inner-image">
-                        <img src="assets/images/banner-12.jpg" alt="" />
+                        <img src="./assets/images/banner-12.jpg" alt="" />
                       </div>
                     </div>
                   </div>
@@ -175,27 +175,27 @@
                   <div class="swiper-wrapper">
                     <div class="swiper-slide">
                       <div class="inner-image">
-                        <img src="assets/images/banner-9.jpg" alt="" />
+                        <img src="./assets/images/banner-9.jpg" alt="" />
                       </div>
                     </div>
                     <div class="swiper-slide">
                       <div class="inner-image">
-                        <img src="assets/images/banner-10.jpg" alt="" />
+                        <img src="./assets/images/banner-10.jpg" alt="" />
                       </div>
                     </div>
                     <div class="swiper-slide">
                       <div class="inner-image">
-                        <img src="assets/images/banner-11.jpg" alt="" />
+                        <img src="./assets/images/banner-11.jpg" alt="" />
                       </div>
                     </div>
                     <div class="swiper-slide">
                       <div class="inner-image">
-                        <img src="assets/images/banner-12.jpg" alt="" />
+                        <img src="./assets/images/banner-12.jpg" alt="" />
                       </div>
                     </div>
                     <div class="swiper-slide">
                       <div class="inner-image">
-                        <img src="assets/images/banner-12.jpg" alt="" />
+                        <img src="./assets/images/banner-12.jpg" alt="" />
                       </div>
                     </div>
                   </div>
@@ -217,7 +217,7 @@
                   phê, đến trung tâm thể dục thể thao hiện đại đến Spa, xông
                   hơi…
                 </p>
-                <img src="assets/images/banner-14.jpg" alt="" />
+                <img src="./assets/images/banner-14.jpg" alt="" />
                 <p>
                   Nói về dịch vụ, chắc chắn rồi, với một tiêu chí của một khách
                   sạn 5 sao đẳng cấp, mình tin rằng Indochine Palace đủ để cho
@@ -229,7 +229,7 @@
                   phê, đến trung tâm thể dục thể thao hiện đại đến Spa, xông
                   hơi…
                 </p>
-                <img src="assets/images/banner-15.jpg" alt="" />
+                <img src="./assets/images/banner-15.jpg" alt="" />
                 <p>
                   Sau khi tập trung tại sân bay Tân Sơn Nhất, đoàn sẽ đáp chuyến
                   bay buổi sáng ra Hà Nội. Khi đến nơi, hướng dẫn viên sẽ đón
@@ -318,7 +318,7 @@
               <div class="inner-title-main">Chuyến Đi Của Bạn</div>
               <div class="inner-product">
                 <div class="inner-image">
-                  <img src="assets/images/banner-13.jpg" alt="" />
+                  <img src="./assets/images/banner-13.jpg" alt="" />
                 </div>
                 <div class="inner-info">
                   <div class="inner-title">
@@ -484,7 +484,7 @@
           <div class="inner-copyright">© 2025 TQD. All rights reserved.</div>
           <div class="inner-logo">
             <a href="index.html">
-              <img src="assets/images/logo.svg" alt="" />
+              <img src="./assets/images/logo.svg" alt="" />
             </a>
           </div>
           <nav class="inner-links">
@@ -533,6 +533,6 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/viewerjs/1.11.7/viewer.min.js"></script>
     <script src="https://unpkg.com/just-validate@latest/dist/just-validate.production.min.js"></script>
-    <script src="assets/js/script.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
