Fix route cart page

--- a/cart.html
+++ b/cart.html
@@ -29,7 +29,7 @@
           </button>
           <div class="inner-logo">
             <a href="index.html">
-              <img src="assets/images/logo.svg" alt="TQD.TRAVEL" />
+              <img src="./assets/images/logo.svg" alt="TQD.TRAVEL" />
             </a>
           </div>
           <nav class="inner-menu">
@@ -84,7 +84,7 @@
 
           <div class="inner-cart">
             <a href="#">
-              <img src="assets/images/icon-cart.svg" alt="Cart" />
+              <img src="./assets/images/icon-cart.svg" alt="Cart" />
               <span>1</span>
             </a>
           </div>
@@ -114,7 +114,7 @@
               <div class="inner-product">
                 <div class="inner-image">
                   <a href="#">
-                    <img src="assets/images/banner-16.jpg" alt="" />
+                    <img src="./assets/images/banner-16.jpg" alt="" />
                   </a>
                 </div>
                 <div class="inner-content">
@@ -347,7 +347,7 @@
           <div class="inner-copyright">© 2025 TQD. All rights reserved.</div>
           <div class="inner-logo">
             <a href="index.html">
-              <img src="assets/images/logo.svg" alt="" />
+              <img src="./assets/images/logo.svg" alt="" />
             </a>
           </div>
           <nav class="inner-links">
@@ -396,6 +396,6 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/viewerjs/1.11.7/viewer.min.js"></script>
     <script src="https://unpkg.com/just-validate@latest/dist/just-validate.production.min.js"></script>
-    <script src="assets/js/script.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
